--- a/css/styles.css
+++ b/css/styles.css
@@ -51,57 +51,50 @@ html, body {
 
 .cosmic-container {
   position: relative;
-  width: 97px;
-  height: 97px;
-  margin: 75px auto 0;
+  width: 90vw;
+  max-width: 600px;
+  height: 22vw;
+  max-height: 120px;
+  margin: 8vw auto 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
 }
 
 .cosmic-container > div {
-  position: absolute;
-  background-position: no-repeat;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 8vw;
+  max-width: 80px;
+  height: 11vw;
+  max-height: 97px;
+  font-size: 5vw;
+  min-width: 36px;
+  min-height: 44px;
+  margin: 0 0.5vw;
+  left: 0 !important;
+  top: 0 !important;
 }
 
-.c-green {
-  background-image: url('https://assets.codepen.io/54887/c-green.png');
-  width: 80px;
-  height: 97px;
-  left: -230px;
-  z-index: 6;
-}
-.o-orange {
-  background-image: url('https://assets.codepen.io/54887/o-orange.png');
-  width: 97px;
-  height: 97px;
-  left: -140px;
-  z-index: 5;
-}
-.s-pink {
-  background-image: url('https://assets.codepen.io/54887/s-pink.png');
-  width: 87px;
-  height: 97px;
-  left: -40px;
-  z-index: 4;
-}
-.m-mint {
-  background-image: url('https://assets.codepen.io/54887/m-mint.png');
-  width: 130px;
-  height: 97px;
-  left: 30px;
-  z-index: 3;
-}
-.i-orange {
-  background-image: url('https://assets.codepen.io/54887/i-orange.png');
-  width: 32px;
-  height: 97px;
-  left: 170px;
-  z-index: 2;
-}
-.c-red {
-  background-image: url('https://assets.codepen.io/54887/c-red.png');
-  width: 80px;
-  height: 97px;
-  left: 210px;
-  z-index: 1;
+@media (max-width: 600px) {
+  .cosmic-container {
+    width: 98vw;
+    height: 18vw;
+    max-height: 70px;
+    margin-top: 4vw;
+  }
+  .cosmic-container > div {
+    width: 9vw;
+    height: 12vw;
+    font-size: 6vw;
+    max-width: 48px;
+    max-height: 60px;
+    min-width: 24px;
+    min-height: 28px;
+    margin: 0 0.2vw;
+  }
 }
 
 .strawberry-container {
